--- a/SportsSideKick/app/src/main/res/layout/language_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/language_item.xml
@@ -36,5 +36,5 @@
         android:lines="1"
         android:layout_below="@+id/background"
         android:gravity="center"
-        android:textColor="@color/white" />
+        android:textColor="?friendItemTextColor" />
 </RelativeLayout>
