--- a/SportsSideKick/app/src/main/res/layout/popup_your_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_your_profile.xml
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="@string/your_profile"
-            android:textColor="?white"
+            android:textColor="?popupsCaptionColor"
             android:textStyle="bold" />
 
         <RelativeLayout
@@ -67,10 +67,10 @@
             android:layout_height="match_parent"
             android:layout_marginEnd="@dimen/margin_1"
             android:layout_weight="1"
-            android:background="@color/colorPrimaryMediumLight"
+            android:background="?popupSelectedCaptionBackgroundColorRef"
             android:gravity="center"
             android:text="@string/profile"
-            android:textColor="?white" />
+            android:textColor="?popupSelectedCaptionTextColorRef" />
 
         <TextView
             android:id="@+id/your_wallet_button"
@@ -78,20 +78,20 @@
             android:layout_height="match_parent"
             android:layout_marginEnd="@dimen/margin_1"
             android:layout_weight="1"
-            android:background="@color/colorPrimary"
+            android:background="?popupNonSelectedCaptionBackgroundColorRef"
             android:gravity="center"
             android:text="@string/wallet"
-            android:textColor="?white_semitransparent" />
+            android:textColor="?popupNonSelectedCaptionTextColorRef" />
 
         <TextView
             android:id="@+id/your_stash_button"
             android:layout_width="@dimen/space_0"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/colorPrimary"
+            android:background="?popupNonSelectedCaptionBackgroundColorRef"
             android:gravity="center"
             android:text="@string/stash"
-            android:textColor="?white_semitransparent" />
+            android:textColor="?popupNonSelectedCaptionTextColorRef" />
     </LinearLayout>
 
     <LinearLayout
@@ -208,7 +208,7 @@
                         android:layout_below="@id/profile_image_container"
                         android:layout_marginTop="@dimen/margin_negative_15"
                         android:gravity="center"
-                        android:textColor="@color/white"
+                        android:textColor="?popupsCaptionColor"
                         android:textStyle="bold" />
 
                     <TextView
@@ -220,7 +220,7 @@
                         android:layout_below="@id/profile_image_container"
                         android:layout_marginTop="@dimen/margin_10"
                         android:gravity="center"
-                        android:textColor="@color/white"
+                        android:textColor="?popupsCaptionColor"
                         android:textSize="@dimen/font_size_14"
                         android:textStyle="bold" />
 
@@ -291,7 +291,7 @@
                         android:layout_alignParentStart="true"
                         android:layout_below="@+id/contact_info_caption"
                         android:layout_marginStart="@dimen/margin_20"
-                        android:textColor="@color/white"
+                        android:textColor="?popupsCaptionColor"
                         android:textSize="@dimen/font_size_12" />
 
                     <TextView
@@ -301,7 +301,7 @@
                         android:layout_alignParentStart="true"
                         android:layout_below="@+id/contact_info_email"
                         android:layout_marginStart="@dimen/margin_20"
-                        android:textColor="@color/white"
+                        android:textColor="?popupsCaptionColor"
                         android:textSize="@dimen/font_size_12" />
 
                     <TextView
@@ -322,7 +322,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignStart="@+id/subscribed_since_caption"
                         android:layout_below="@+id/subscribed_since_caption"
-                        android:textColor="@color/white"
+                        android:textColor="?popupsCaptionColor"
                         android:textSize="@dimen/font_size_12" />
 
                     <TextView
@@ -342,7 +342,7 @@
                         android:layout_alignStart="@+id/location_caption"
                         android:layout_below="@+id/location_caption"
                         android:layout_centerHorizontal="true"
-                        android:textColor="@color/white"
+                        android:textColor="?popupsCaptionColor"
                         android:textSize="@dimen/font_size_12" />
 
                     <TextView
@@ -365,7 +365,7 @@
                         android:layout_alignStart="@+id/password_caption"
                         android:layout_below="@+id/password_caption"
                         android:text="@string/password_placeholder"
-                        android:textColor="@color/white"
+                        android:textColor="?popupsCaptionColor"
                         android:textSize="@dimen/font_size_12" />
 
                     <TextView
@@ -398,7 +398,7 @@
                         android:layout_marginBottom="@dimen/margin_10"
                         android:layout_marginStart="@dimen/margin_20"
                         android:text="@string/english"
-                        android:textColor="@color/white"
+                        android:textColor="?popupsCaptionColor"
                         android:textSize="@dimen/font_size_12" />
 
                     <ImageButton
@@ -460,7 +460,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
-                                android:textColor="@color/white"
+                                android:textColor="?popupsCaptionColor"
                                 android:textSize="@dimen/font_size_25"
                                 android:textStyle="bold" />
 
