--- a/SportsSideKick/app/src/main/res/layout/popup_your_stash.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_your_stash.xml
@@ -43,7 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:textStyle="bold"
-            android:textColor="?white"
+            android:textColor="?popupsCaptionColor"
             android:text="@string/your_profile" />
         <RelativeLayout
             android:id="@+id/back_button_holder"
@@ -80,10 +80,10 @@
             android:layout_height="match_parent"
             android:layout_marginEnd="@dimen/margin_1"
             android:layout_weight="1"
-            android:background="@color/colorPrimary"
+            android:background="?popupNonSelectedCaptionBackgroundColorRef"
             android:gravity="center"
             android:text="@string/profile"
-            android:textColor="?white_semitransparent" />
+            android:textColor="?popupNonSelectedCaptionTextColorRef" />
 
         <TextView
             android:id="@+id/your_wallet_button"
@@ -91,20 +91,20 @@
             android:layout_height="match_parent"
             android:layout_marginEnd="@dimen/margin_1"
             android:layout_weight="1"
-            android:background="@color/colorPrimary"
+            android:background="?popupNonSelectedCaptionBackgroundColorRef"
             android:gravity="center"
             android:text="@string/wallet"
-            android:textColor="?white_semitransparent" />
+            android:textColor="?popupNonSelectedCaptionTextColorRef" />
 
         <TextView
             android:id="@+id/your_stash_button"
             android:layout_width="@dimen/space_0"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/colorPrimaryMediumLight"
+            android:background="?popupSelectedCaptionBackgroundColorRef"
             android:gravity="center"
             android:text="@string/stash"
-            android:textColor="?white" />
+            android:textColor="?popupSelectedCaptionTextColorRef" />
     </LinearLayout>
 
     <LinearLayout
@@ -164,7 +164,7 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/your_stash_caption"
         android:text="@string/rewards_and_items_received"
-        android:textColor="@color/white"
+        android:textColor="?popupsCaptionColor"
         android:textSize="@dimen/font_size_12" />
 
 
