--- a/SportsSideKick/app/src/main/res/layout-large/popup_create_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/popup_create_chat.xml
@@ -42,7 +42,7 @@
                 android:gravity="center"
                 android:padding="@dimen/padding_8"
                 android:text="@string/chat_caption"
-                android:textColor="?chatPopupsCaptionColor" />
+                android:textColor="?popupsCaptionColor" />
 
         </RelativeLayout>
 
@@ -136,14 +136,14 @@
                 android:layout_below="@+id/top_vertical_spliter"
                 android:layout_toEndOf="@id/chat_image_view"
                 android:layout_toStartOf="@+id/chat_popup_image_button"
-                android:background="?chatJoinSearchBackgroundColorRef"
+                android:background="@color/colorPrimaryMediumDark"
                 android:gravity="start|center_vertical"
                 android:hint="@string/your_chat_name"
                 android:imeOptions="flagNoExtractUi"
                 android:maxLines="1"
                 android:padding="@dimen/margin_20"
                 android:textColor="?chatJoinSearchTextColorRef"
-                android:textColorHint="?white_semitransparent"
+                android:textColorHint="?chatJoinSearchTextColorRef"
                 android:textSize="@dimen/font_size_14" />
 
             <ImageButton
