--- a/SportsSideKick/app/src/main/res/layout/fragment_video_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_video_chat.xml
@@ -231,12 +231,11 @@
             android:src="@drawable/video_chat_background" />
 
 
-        <ImageView
+        <View
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:alpha="0.6"
-            android:background="@drawable/phone_background"
-            android:contentDescription="@null" />
+            android:background="@color/colorPrimary"
+            android:alpha="0.65" />
 
 
         <RelativeLayout
