--- a/SportsSideKick/app/src/main/res/layout/friend_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/friend_item.xml
@@ -30,7 +30,7 @@
         android:gravity="center_horizontal"
         android:lines="1"
         android:maxLines="1"
-        android:textColor="@color/white"
+        android:textColor="?friendItemTextColor"
         android:textSize="@dimen/font_size_11"
         android:textStyle="bold" />
 
