--- a/SportsSideKick/app/src/main/res/layout/friend_request_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/friend_request_item.xml
@@ -33,13 +33,14 @@
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"/>
+            android:text="name"
+            android:textColor="?friendItemTextColor"/>
         <TextView
             android:id="@+id/date_prefix"
             android:layout_below="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
+            android:textColor="?friendItemTextColor"
             android:text="@string/requested_on"/>
         <TextView
             android:id="@+id/date"
@@ -48,7 +49,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/name"
             android:layout_toEndOf="@+id/date_prefix"
-            android:textColor="@color/white"/>
+            android:text="date"
+            android:textColor="?friendItemTextColor"/>
     </RelativeLayout>
 
     <ImageButton
