--- a/SportsSideKick/app/src/main/res/layout/popup_login_sing_up.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_login_sing_up.xml
@@ -22,7 +22,7 @@
             android:gravity="center_vertical"
             android:text="@string/join_now_sign_in"
             android:textAllCaps="true"
-            android:textColor="?white"
+            android:textColor="?popupsCaptionColor"
             android:textSize="@dimen/font_size_16" />
 
         <ImageButton
@@ -82,7 +82,7 @@
                 android:layout_marginBottom="@dimen/margin_30"
                 android:layout_marginTop="@dimen/margin_30"
                 android:text="@string/login_slider_text_1_phone"
-                android:textColor="?white"
+                android:textColor="?popupsCaptionColor"
                 android:textSize="@dimen/font_size_28" />
 
 
