--- a/SportsSideKick/app/src/main/res/layout/popup_member_info.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_member_info.xml
@@ -18,7 +18,7 @@
         android:orientation="horizontal"
         android:text="@string/user_profile"
         android:textAlignment="center"
-        android:textColor="?white"
+        android:textColor="?popupsCaptionColor"
         android:tileMode="repeat"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -41,7 +41,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:src="?videoCloseButtonIcon"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="parent"
@@ -248,7 +248,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="0dp"
             android:textAlignment="center"
-            android:textColor="@color/white"
+            android:textColor="?popupsCaptionColor"
             android:textSize="@dimen/font_size_16"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -354,7 +354,7 @@
             android:id="@+id/video_button"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:visibility="gone"
+            android:visibility="visible"
             android:layout_weight="1">
 
             <ImageView
@@ -393,7 +393,7 @@
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/more_button"
-            android:visibility="gone"
+            android:visibility="visible"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1">
@@ -596,7 +596,7 @@
                     android:layout_marginTop="@dimen/margin_2"
                     android:text="@string/posts"
                     android:textAlignment="center"
-                    android:textColor="?white" />
+                    android:textColor="?popupsCaptionColor" />
 
             </LinearLayout>
             <View
@@ -638,7 +638,7 @@
                     android:layout_marginTop="@dimen/margin_2"
                     android:text="@string/friends"
                     android:textAlignment="center"
-                    android:textColor="?white" />
+                    android:textColor="?popupsCaptionColor" />
 
             </LinearLayout>
             <View
@@ -679,7 +679,7 @@
                     android:layout_marginTop="@dimen/margin_2"
                     android:text="@string/comments"
                     android:textAlignment="center"
-                    android:textColor="?white" />
+                    android:textColor="?popupsCaptionColor" />
 
             </LinearLayout>
 
