--- a/SportsSideKick/app/src/main/res/layout/popup_new_call.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_new_call.xml
@@ -36,7 +36,7 @@
             android:gravity="center"
             android:padding="@dimen/padding_8"
             android:text="@string/video_chat"
-            android:textColor="@color/white" />
+            android:textColor="?popupsCaptionColor" />
 
     </RelativeLayout>
 
@@ -100,7 +100,7 @@
                     android:background="@color/colorPrimaryMediumLight"
                     android:gravity="center"
                     android:text="@string/create_call"
-                    android:textColor="?white" />
+                    android:textColor="?popupsCaptionColor" />
 
 
 
