--- a/SportsSideKick/app/src/main/res/layout/popup_right_login_sing_up.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_right_login_sing_up.xml
@@ -55,7 +55,7 @@
                     android:layout_marginTop="@dimen/margin_15"
                     android:text="@string/login_slider_text_1_phone"
                     android:textAlignment="center"
-                    android:textColor="?white"
+                    android:textColor="?popupsCaptionColor"
                     android:textSize="@dimen/font_size_22" />
 
                 <TextView
@@ -68,7 +68,7 @@
                     android:layout_marginTop="@dimen/margin_15"
                     android:text="@string/login_slider_chat"
                     android:textAlignment="center"
-                    android:textColor="?white"
+                    android:textColor="?popupsCaptionColor"
                     android:textSize="@dimen/font_size_18" />
 
 
