--- a/SportsSideKick/app/src/main/res/layout/popup_signup.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_signup.xml
@@ -30,7 +30,7 @@
             android:gravity="center_vertical"
             android:text="@string/join_now_sign_in"
             android:textAllCaps="true"
-            android:textColor="?white"
+            android:textColor="?popupsCaptionColor"
             android:textSize="@dimen/font_size_16"
             android:textStyle="bold"/>
 
@@ -133,7 +133,7 @@
                             android:layout_width="0dp"
                             android:layout_height="@dimen/height_1"
                             android:layout_weight="1"
-                            android:background="?white"/>
+                            android:background="?popupsCaptionColor"/>
 
                         <TextView
                             android:id="@+id/or_label"
@@ -143,13 +143,13 @@
                             android:gravity="center"
                             android:text="@string/sign_up_or"
                             android:textAllCaps="true"
-                            android:textColor="@color/white"/>
+                            android:textColor="?popupsCaptionColor"/>
 
                         <View
                             android:layout_width="0dp"
                             android:layout_height="@dimen/height_1"
                             android:layout_weight="1"
-                            android:background="?white"/>
+                            android:background="?popupsCaptionColor"/>
 
                         <View
                             android:layout_width="0dp"
